Apply suggestions from code review
Co-authored-by: Joe Medley <jmedley@google.com>

--- a/api-samples/downloads/download_manager/_locales/en/messages.json
+++ b/api-samples/downloads/download_manager/_locales/en/messages.json
@@ -4,7 +4,7 @@
     "description": "Extension name"
   },
   "extDesc": {
-    "message": "Browser Action Download Manager User Interface for Google Chrome",
+    "message": "Uses multiple chrome.downloads APIs to implement a simple download manager.",
     "description": "Extension description"
   },
   "tabTitle": {
